--- a/fp2.html
+++ b/fp2.html
@@ -10,23 +10,18 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-
-           /* background-image: url('file:///C:/Users/centu/OneDrive/Pictures/fireimage2.jpg');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-attachment: scroll; */ 
-               }
+        }
 
         header {
-            background-color: #2050df;
-            color: rgb(255, 255, 255);
+            background-color: blue;
+            color: white;
             padding: 10px 0;
         }
 
         header .container {
             display: flex;
             justify-content: space-between;
-            align-items: center;
+            align-items: center;   /*center initially*/
         }
 
         header h1 {
@@ -47,7 +42,7 @@
         nav ul li button {
             background-color: transparent;
             border: none;
-            color: rgb(255, 255, 255);
+            color:white;
             cursor: pointer;
             font-size: 1em;
         }
@@ -56,7 +51,7 @@
             display: flex;
             justify-content: center;
             padding: 10px;
-            background-color: #f4f4f4/*rgba(25, 66, 192, 0.8);*/
+            background-color: #f4f4f4;
         }
 
         .search-bar {
@@ -79,12 +74,42 @@
             cursor: pointer;
         }
 
-        main.container{
-            background: white; /* Change background color to white */
-            color: black; /* Set text color to black */
+
+
+        .image-container {
+    position: relative;      /* Allows absolute positioning for child elements */
+    display: inline-block;
+    width:100%;   /* Shrinks container to image size */
+  }
+  
+  .image-container img {
+    width: 100%;             /* Ensures image fits the container */
+    height:auto;            /* Maintains aspect ratio */
+  }
+  
+  .text-overlay{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 10px;
+    transform: translate(-50%, -50%); 
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    color: rgb(247, 247, 247);
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 20px;
+    border-radius: 10px;
+}
+
+
+
+
+       main.container {
+            background: 45.4 93.4% 47.5%;
+            color: black;
             text-align: center;
             padding: 100px 0;
-            margin: 20px;
         }
 
         main.container h2 {
@@ -131,12 +156,12 @@
         .product-card button {
             padding: 10px 20px;
             background-color: #2050df;
-            color: white;
+            color: rgb(255, 255, 255);
             border: none;
             cursor: pointer;
         }
 
-        footer {
+        .footer {
             background-color: #2050df;
             color: white;
             text-align: center;
@@ -152,11 +177,10 @@
                 <ul>
                     <li><button>Products</button></li>
                     <li><button>About</button></li>
-                    <li><button>Login</button></li>
+                    <li><a href="form3.html"><button>Login</button></a></li>
                     <li><button>Feedback</button></li>
                 </ul>
             </nav>
-           <!--<button class="option-button">Options</button>--> 
         </div>
     </header>
 
@@ -167,14 +191,34 @@
         </div>
     </div>
 
+
+
+
     <main>
-        <section>
+       <!-- <section class="hero"> -->
             <div class="container">
-                <h2>Welcome to Rent Ink Hub</h2>
-                <p>Your one-stop store for everything!</p>
-                <button>Register your items here</button>
+
+
+                <div class="image-container">
+                    <img src="file:///C:/Users/centu/OneDrive/Desktop/Coding/html/img/titleimage1.jpeg.jpg" alt="image">
+                    <div class="text-overlay">
+
+                 <h2>Welcome to Rent Ink Hub</h2>
+                 <p>Your one-stop store for everything!</p>
+                 <a href="registrationpage1.html">
+                    <button>Register your items here</button>
+                 </a>
+                    </div>
+                </div>
+
+
+
+
             </div>
-        </section>
+       <!-- </section> -->
+
+
+
         <hr>
 
         <section class="products">
@@ -184,8 +228,8 @@
                     <div class="product-card">
                         <img src="https://via.placeholder.com/150" alt="Product 1">
                         <h3>Books</h3>
-                        <p>50</p>
-                        <button>Add to Cart</button>
+                        <p>$99.99</p>
+                        <button onclick="window.location.href='Books Section.html';">Add to Cart</button>
                     </div>
                     <div class="product-card">
                         <img src="https://via.placeholder.com/150" alt="Product 2">
@@ -206,8 +250,8 @@
                         <button>Add to Cart</button>
                     </div>
                     <div class="product-card">
-                        <img src="https://via.placeholder.com/150" alt="Product 3">
-                        <h3> stationary items</h3>
+                        <img src="https://via.placeholder.com/150" alt="Product 5">
+                        <h3>Stationary items</h3>
                         <p>$99.99</p>
                         <button>Add to Cart</button>
                     </div>
@@ -216,7 +260,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         <div class="container">
             <p>"A small step towards a greater leap."</p>
         </div>
